# rl_sar

./: gen_torch_script.py  run.sh  test.py
.catkin_tools/profiles/default/: devel_collisions.txt
doc/: Experiments.md
logs/catkin_tools_prebuild/: build.cmake.001.log.stderr
logs/go2_description_xzh/: build.cmake.000.log.stderr
logs/rl_sar/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
pt/: velocity.pt
src/rl_sar/: CMakeLists.txt
src/rl_sar/include/: rl_real_go2.hpp
src/rl_sar/launch/: debug.launch  rl_real_go2_with_bbox.launch  run.launch
src/rl_sar/models/go2_xzh/: config.yaml  obs_1744689664305040653.csv  obs_1744689664305040653.ods  obs_1744693240264708743.csv  obs_1744693305739173576.csv  obs_20250415_131229.csv  obs_20250415_131310.csv  obs_20250415_131436.csv  obs_20250415_171944.csv  obs_20250415_172121.csv  obs_20250415_172209.csv  obs_20250415_172420.csv  obs_20250415_172506.csv  obs_20250415_172608.csv  obs_20250415_172717.csv  obs_20250415_172821.csv  obs_20250415_172940.csv  obs_20250415_173135.csv  obs_20250415_173238.csv  obs_20250415_173330.csv  obs_20250415_173431.csv  obs_20250415_173540.csv  obs_20250415_175856.csv  obs_20250415_175948.csv  obs_20250415_181450.csv  obs_20250415_181545.csv  obs_20250415_181626.csv  obs_20250415_181704.csv  obs_20250415_181756.csv  obs_20250415_182028.csv  obs_20250415_182105.csv  obs_20250415_182230.csv  obs_20250415_184955.csv  obs_20250415_185052.csv  obs_20250415_185123.csv  obs_20250415_200301.csv  obs_20250415_200347.csv  obs_20250415_201527.csv  obs_20250415_201707.csv  obs_20250415_201746.csv  (+326 more)
src/rl_sar/rviz/: bbox_visualization.rviz
src/rl_sar/scripts/: rl_sdk.py
src/rl_sar/src/: rl_real_a1.cpp  rl_real_go2.cpp  test.py  tf_relay.cpp
src/robots/go2_description_xzh/: CMakeLists.txt  package.xml
src/robots/go2_description_xzh/dae/: back_ball_1.STL  back_ball_4.STL  back_marker_body.STL  ball_5.STL  head_market_body.STL  stick_ball_1.STL  stick_ball_3.STL  stick_ball_4.STL  stick_body.STL  stick_head_ball.STL
src/robots/go2_description_xzh/urdf/: all.urdf  go2.urdf  go2_bbox.yaml  go2_xzh.urdf  stickball_xzh.urdf
